appdemo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appdemo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: appdemo
  template:
    metadata:
      labels:
        app: appdemo
    spec:
      containers:
      - name: appdemo
        image: appdemo
        resources:
          limits:
            memory: "8Mi"
            cpu: "50m"
        ports:
        - containerPort: 80
