appdemo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: appdemo
  labels:
    name: appdemo
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-aplicacion-replacepath@kubernetescrd

spec:
  rules:
  - host: cluster.local
    http:
      paths:
      - pathType: Prefix
        path: "/app"
        backend:
          service:
            name: appdemo
            port:
              number: 80
